TinyScript/Parser/TinyScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TinyScript.g4 by ANTLR 4.5.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.2")]
[System.CLSCompliant(false)]
public partial class TinyScriptParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, StringLiteral=33, Decimal=34, Identifier=35, LineComment=36, 
		Comment=37, WhiteSpace=38;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_ifStatement = 2, RULE_quoteExpr = 3, 
		RULE_blockStatement = 4, RULE_assignStatement = 5, RULE_declareStatement = 6, 
		RULE_printStatement = 7, RULE_whileStatement = 8, RULE_doWhileStatement = 9, 
		RULE_forStatement = 10, RULE_commonExpression = 11, RULE_assignAbleStatement = 12, 
		RULE_declareExpression = 13, RULE_expression = 14, RULE_andAndExpression = 15, 
		RULE_cmpExpression = 16, RULE_addExpression = 17, RULE_mulExpression = 18, 
		RULE_unaryExpression = 19, RULE_primaryExpression = 20, RULE_variableExpression = 21, 
		RULE_basicType = 22, RULE_declarators = 23, RULE_assign = 24, RULE_numericLiteral = 25;
	public static readonly string[] ruleNames = {
		"program", "statement", "ifStatement", "quoteExpr", "blockStatement", 
		"assignStatement", "declareStatement", "printStatement", "whileStatement", 
		"doWhileStatement", "forStatement", "commonExpression", "assignAbleStatement", 
		"declareExpression", "expression", "andAndExpression", "cmpExpression", 
		"addExpression", "mulExpression", "unaryExpression", "primaryExpression", 
		"variableExpression", "basicType", "declarators", "assign", "numericLiteral"
	};

	private static readonly string[] _LiteralNames = {
		null, "'if'", "'else'", "'('", "')'", "'{'", "'}'", "';'", "'print'", 
		"'while'", "'do'", "'for'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='", 
		"'>'", "'>='", "'+'", "'-'", "'*'", "'/'", "'!'", "'true'", "'false'", 
		"'decimal'", "'string'", "'bool'", "'var'", "','", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "StringLiteral", 
		"Decimal", "Identifier", "LineComment", "Comment", "WhiteSpace"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TinyScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public TinyScriptParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(TinyScriptParser.Eof, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			do {
				{
				{
				State = 52; statement();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << Identifier))) != 0) );
			State = 57; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public BlockStatementContext blockStatement() {
			return GetRuleContext<BlockStatementContext>(0);
		}
		public AssignStatementContext assignStatement() {
			return GetRuleContext<AssignStatementContext>(0);
		}
		public DeclareStatementContext declareStatement() {
			return GetRuleContext<DeclareStatementContext>(0);
		}
		public PrintStatementContext printStatement() {
			return GetRuleContext<PrintStatementContext>(0);
		}
		public WhileStatementContext whileStatement() {
			return GetRuleContext<WhileStatementContext>(0);
		}
		public DoWhileStatementContext doWhileStatement() {
			return GetRuleContext<DoWhileStatementContext>(0);
		}
		public ForStatementContext forStatement() {
			return GetRuleContext<ForStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 67;
			switch (TokenStream.La(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 59; ifStatement();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; blockStatement();
				}
				break;
			case Identifier:
				EnterOuterAlt(_localctx, 3);
				{
				State = 61; assignStatement();
				}
				break;
			case T__26:
			case T__27:
			case T__28:
			case T__29:
				EnterOuterAlt(_localctx, 4);
				{
				State = 62; declareStatement();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 5);
				{
				State = 63; printStatement();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 6);
				{
				State = 64; whileStatement();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 7);
				{
				State = 65; doWhileStatement();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 8);
				{
				State = 66; forStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStatementContext : ParserRuleContext {
		public QuoteExprContext quoteExpr() {
			return GetRuleContext<QuoteExprContext>(0);
		}
		public BlockStatementContext[] blockStatement() {
			return GetRuleContexts<BlockStatementContext>();
		}
		public BlockStatementContext blockStatement(int i) {
			return GetRuleContext<BlockStatementContext>(i);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStatementContext ifStatement() {
		IfStatementContext _localctx = new IfStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_ifStatement);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 69; Match(T__0);
				State = 70; quoteExpr();
				State = 71; blockStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 73; Match(T__0);
				State = 74; quoteExpr();
				State = 75; blockStatement();
				State = 76; Match(T__1);
				State = 77; blockStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QuoteExprContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public QuoteExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_quoteExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuoteExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QuoteExprContext quoteExpr() {
		QuoteExprContext _localctx = new QuoteExprContext(Context, State);
		EnterRule(_localctx, 6, RULE_quoteExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(T__2);
			State = 82; expression();
			State = 83; Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockStatementContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockStatementContext blockStatement() {
		BlockStatementContext _localctx = new BlockStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_blockStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(T__4);
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << Identifier))) != 0)) {
				{
				{
				State = 86; statement();
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 92; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignStatementContext : ParserRuleContext {
		public AssignContext assign() {
			return GetRuleContext<AssignContext>(0);
		}
		public AssignStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignStatementContext assignStatement() {
		AssignStatementContext _localctx = new AssignStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_assignStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; assign();
			State = 95; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclareStatementContext : ParserRuleContext {
		public DeclareExpressionContext declareExpression() {
			return GetRuleContext<DeclareExpressionContext>(0);
		}
		public DeclareStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declareStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclareStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclareStatementContext declareStatement() {
		DeclareStatementContext _localctx = new DeclareStatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_declareStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; declareExpression();
			State = 98; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintStatementContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PrintStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_printStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrintStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintStatementContext printStatement() {
		PrintStatementContext _localctx = new PrintStatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_printStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; Match(T__7);
			State = 101; Match(T__2);
			State = 102; expression();
			State = 103; Match(T__3);
			State = 104; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WhileStatementContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public BlockStatementContext blockStatement() {
			return GetRuleContext<BlockStatementContext>(0);
		}
		public WhileStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_whileStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWhileStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WhileStatementContext whileStatement() {
		WhileStatementContext _localctx = new WhileStatementContext(Context, State);
		EnterRule(_localctx, 16, RULE_whileStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; Match(T__8);
			State = 107; Match(T__2);
			State = 108; expression();
			State = 109; Match(T__3);
			State = 110; blockStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DoWhileStatementContext : ParserRuleContext {
		public BlockStatementContext blockStatement() {
			return GetRuleContext<BlockStatementContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DoWhileStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_doWhileStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoWhileStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DoWhileStatementContext doWhileStatement() {
		DoWhileStatementContext _localctx = new DoWhileStatementContext(Context, State);
		EnterRule(_localctx, 18, RULE_doWhileStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112; Match(T__9);
			State = 113; blockStatement();
			State = 114; Match(T__8);
			State = 115; Match(T__2);
			State = 116; expression();
			State = 117; Match(T__3);
			State = 118; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ForStatementContext : ParserRuleContext {
		public CommonExpressionContext commonExpression() {
			return GetRuleContext<CommonExpressionContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignAbleStatementContext assignAbleStatement() {
			return GetRuleContext<AssignAbleStatementContext>(0);
		}
		public BlockStatementContext blockStatement() {
			return GetRuleContext<BlockStatementContext>(0);
		}
		public ForStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_forStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitForStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ForStatementContext forStatement() {
		ForStatementContext _localctx = new ForStatementContext(Context, State);
		EnterRule(_localctx, 20, RULE_forStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; Match(T__10);
			State = 121; Match(T__2);
			State = 122; commonExpression();
			State = 123; Match(T__6);
			State = 124; expression();
			State = 125; Match(T__6);
			State = 126; assignAbleStatement();
			State = 127; Match(T__3);
			State = 128; blockStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommonExpressionContext : ParserRuleContext {
		public DeclareExpressionContext declareExpression() {
			return GetRuleContext<DeclareExpressionContext>(0);
		}
		public AssignAbleStatementContext assignAbleStatement() {
			return GetRuleContext<AssignAbleStatementContext>(0);
		}
		public CommonExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commonExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommonExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommonExpressionContext commonExpression() {
		CommonExpressionContext _localctx = new CommonExpressionContext(Context, State);
		EnterRule(_localctx, 22, RULE_commonExpression);
		try {
			State = 132;
			switch (TokenStream.La(1)) {
			case T__26:
			case T__27:
			case T__28:
			case T__29:
				EnterOuterAlt(_localctx, 1);
				{
				State = 130; declareExpression();
				}
				break;
			case T__2:
			case T__20:
			case T__23:
			case T__24:
			case T__25:
			case StringLiteral:
			case Decimal:
			case Identifier:
				EnterOuterAlt(_localctx, 2);
				{
				State = 131; assignAbleStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignAbleStatementContext : ParserRuleContext {
		public AssignContext assign() {
			return GetRuleContext<AssignContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignAbleStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignAbleStatement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignAbleStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignAbleStatementContext assignAbleStatement() {
		AssignAbleStatementContext _localctx = new AssignAbleStatementContext(Context, State);
		EnterRule(_localctx, 24, RULE_assignAbleStatement);
		try {
			State = 136;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134; assign();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 135; expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclareExpressionContext : ParserRuleContext {
		public BasicTypeContext basicType() {
			return GetRuleContext<BasicTypeContext>(0);
		}
		public DeclaratorsContext declarators() {
			return GetRuleContext<DeclaratorsContext>(0);
		}
		public DeclareExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declareExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclareExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclareExpressionContext declareExpression() {
		DeclareExpressionContext _localctx = new DeclareExpressionContext(Context, State);
		EnterRule(_localctx, 26, RULE_declareExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; basicType();
			State = 139; declarators();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public AndAndExpressionContext[] andAndExpression() {
			return GetRuleContexts<AndAndExpressionContext>();
		}
		public AndAndExpressionContext andAndExpression(int i) {
			return GetRuleContext<AndAndExpressionContext>(i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 28, RULE_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141; andAndExpression();
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__11) {
				{
				{
				State = 142; Match(T__11);
				State = 143; andAndExpression();
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndAndExpressionContext : ParserRuleContext {
		public CmpExpressionContext[] cmpExpression() {
			return GetRuleContexts<CmpExpressionContext>();
		}
		public CmpExpressionContext cmpExpression(int i) {
			return GetRuleContext<CmpExpressionContext>(i);
		}
		public AndAndExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andAndExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndAndExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndAndExpressionContext andAndExpression() {
		AndAndExpressionContext _localctx = new AndAndExpressionContext(Context, State);
		EnterRule(_localctx, 30, RULE_andAndExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; cmpExpression();
			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__12) {
				{
				{
				State = 150; Match(T__12);
				State = 151; cmpExpression();
				}
				}
				State = 156;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmpExpressionContext : ParserRuleContext {
		public AddExpressionContext[] addExpression() {
			return GetRuleContexts<AddExpressionContext>();
		}
		public AddExpressionContext addExpression(int i) {
			return GetRuleContext<AddExpressionContext>(i);
		}
		public CmpExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmpExpression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITinyScriptVisitor<TResult> typedVisitor = visitor as ITinyScriptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmpExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
